ADDED_finishes creating the JS hider and fixing the forms display on mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,9 +15,9 @@
 // Application wide CSS styling
 
 html {
-  height: 100%;
+  height: 100vh;
 }
 
 body {
-  height: 100%;
+  height: 100vh;
 }
